--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
      #localrefresh {display:none;float: right; width: 40px; padding: 5px 10px;}
 
 
-.navbar {display: -webkit-box; -webkit-box-orient: horizontal; position: relative; height: 40px; box-sizing: border-box;  }
-    .navbar-item {display: block; -webkit-box-flex: 1; width: 100%; line-height: 40px;  font-size: 16px; text-align: center;color: #000; }
+.navbar {display: -webkit-box; -webkit-box-orient: horizontal; position: relative; height: 50px; box-sizing: border-box;  }
+    .navbar-item {display: block; -webkit-box-flex: 1; width: 100%; line-height: 50px;  font-size: 16px; text-align: center;color: #000; }
     .navbar-item-hov {background-color: rgba(254,242,228,0.7); }
     .navbar-item-active {color: #fff; }
     #navmark {position: absolute; left: 0px; bottom: 0px; -webkit-transition: 300ms; text-align: center; height: 2px;background-color: #D43C33;}
@@ -207,7 +207,7 @@ function openframe02more () {
         url: './html/second_frame/frame02_more.html',
         rect: {
             x: 0,
-            y: firstHeaderOffset.h,
+            y: 0,
             w: 'auto',
             h: 'auto'
         },
@@ -432,22 +432,23 @@ function openFirstFramegroup() {
         scrollEnabled: true,
         rect: {
             x: 0,
-            y: firstHeaderOffset.h + firstHeaderIndexHeight,
+            // y: firstHeaderOffset.h + firstHeaderIndexHeight,
+            y: firstHeaderOffset.h,
             w: "auto",
             h: api.frameHeight - firstHeaderOffset.h - firstHeaderIndexHeight - footerPos.h
         },
         index: 1,
         frames: [{
-            name: 'frame01_list',
-            url: './html/first_frame/frame01_list.html',
+            name: 'findmusic01',
+            url: 'html/findmusic01.html',
             bounces: false,
         }, {
             name: 'frame01_recommand',
             url: './html/first_frame/frame01_recommand.html',
             bounces: false,
         }, {
-            name: 'frame01_radio',
-            url: './html/first_frame/frame01_radio.html',
+            name: 'frame0301',
+            url: './html/third_frame/frame0301.html',
             bounces: false,
         }
         // , {
@@ -681,6 +682,7 @@ apiready = function() {
     }, function (ret) {
 
     });
+
 };
 
 
