导航样式的调整
git-svn-id: svn://svn3.apicloud.com/A6068784333482/xiaoguo@11 0e1a2743-8d03-4e5a-a60c-7e26af42b145

--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
 
      /*第一头部*/
     .egret-header-box {height: 50px;}
-    .egret-img img {height: 30px;padding: 10px;}
+    .egret-img img {height: 30px;padding: 10px;position: absolute;top: 15px;}
     .egret-header-search {background-color: #fff; position: absolute; left: 60px; right: 20px; height: 34px; margin-top: 8px;border-radius: 4px;}
     .egret-header-search img {margin-left: 30px; height: 20px; margin-top: 7px;}
 
      /* 第二头部 */
-    .egret-header-text {line-height: 50px;color: #fff;font-size: 16px;padding: 0 10px;}
-    .egret-header-title {position: absolute;width: 100%;text-align: center;line-height: 40px;color: #fff;font-size: 20px;}
+    .egret-header-text {line-height: 50px;color: #fff;font-size: 16px;padding: 0 10px;position: absolute;top: 15px;}
+    .egret-header-title {position: absolute;width: 100%;text-align: center;line-height: 40px;color: #fff;font-size: 20px;top: 15px;}
 
 
     /* 第三头部 */
@@ -79,32 +79,29 @@
      #localrefresh {display:none;float: right; width: 40px; padding: 5px 10px;}
 
 
-.navbar {display: -webkit-box; -webkit-box-orient: horizontal; position: relative; height: 50px; box-sizing: border-box;  }
+.navbar {display: -webkit-box; -webkit-box-orient: horizontal; position: relative; height: 50px; line-height: 50px; box-sizing: border-box; top: -15px;}
     .navbar-item {display: block; -webkit-box-flex: 1; width: 100%; line-height: 50px;  font-size: 16px; text-align: center;color: #000; }
     .navbar-item-hov {background-color: rgba(254,242,228,0.7); }
     .navbar-item-active {color: #fff; }
     #navmark {position: absolute; left: 0px; bottom: 0px; -webkit-transition: 300ms; text-align: center; height: 2px;background-color: #D43C33;}
 
     .menu1 {
-        line-height:30px;
+        line-height:50px;
         -webkit-box-flex: 1;
         -webkit-flex: 1;
         flex: 1;
         text-align: center;
     }
     .menu2 {
-        /*line-height:30px;
-        -webkit-box-flex: 3;
-        -webkit-flex: 3;
-        flex: 3;
-        text-align: center;*/
         width: 70px;
-        height: 40px;
+        height: 30px;
         line-height: 40px;
         background-size: 30px;
         background-repeat: no-repeat;
         background-position: center;
         background-image: url("image/menu.png");
+        position: relative;
+        top: -5px;
     }
     </style>
 </head>
@@ -113,7 +110,6 @@
         <!-- 第一头部 -->
         <div id="firstHeader" class="titlebar activebar">
             <div class="egret-header topbar normalHeader">
-
                 <div class="egret-header-box egret-img fl header menu2" onclick="sliding()"><a class="menu menu1" tapmode="" onclick=""></a></div>
                 <nav class="navbar">
                     <a id="navbar-item-recommend" class="navbar-item navbar-item-active" tapmode="navbar-item-hov" onclick="setFrameGroupIndex(0);">推荐</a>
@@ -432,8 +428,8 @@ function openFirstFramegroup() {
         scrollEnabled: true,
         rect: {
             x: 0,
-            // y: firstHeaderOffset.h + firstHeaderIndexHeight,
-            y: firstHeaderOffset.h,
+            y: firstHeaderOffset.h + firstHeaderIndexHeight,
+            // y: firstHeaderOffset.h,
             w: "auto",
             h: api.frameHeight - firstHeaderOffset.h - firstHeaderIndexHeight - footerPos.h
         },
@@ -660,14 +656,14 @@ apiready = function() {
     // $api.byId('navmark').style.width = api.winWidth / 3 + 'px';
     isFirstOpen = true;
     openFirstFramegroup();
-    apiready = function () {
-      $api.fixStatusBar($api.dom('.header'));
-        api.addEventListener({
-            name: 'keyback'
-        }, function(ret, err){
-            api.closeWidget();
-        });
-    };
+    // apiready = function () {
+    //   $api.fixStatusBar($api.dom('.header'));
+    //     api.addEventListener({
+    //         name: 'keyback'
+    //     }, function(ret, err){
+    //         api.closeWidget();
+    //     });
+    // };
     api.openSlidLayout({
         type: 'left',
         leftEdge: 60,
