--- a/index.html
+++ b/index.html
@@ -10,99 +10,97 @@
     <style>
 
     /* 头部样式 */
-    #firstHeader {background-color:  #D43C33;}
-    #secHeader {background-color:  #D43C33;}
-    #thridHeader {background-color:  #D43C33;}
-    #fortheader {background-color:  #D43C33;}
+      #firstHeader {background-color:  #D43C33;}
+      #secHeader {background-color:  #D43C33;}
+      #thridHeader {background-color:  #D43C33;}
+      #fortheader {background-color:  #D43C33;}
 
-    .topbar {background: #D43C33; height:40px; border-bottom: 1px solid #DDDFE3;position: relative;}
-    .topbar_title {display: inline-block;font-size: 20px; line-height: 50px;padding-left: 12px;}
-    .hr01, .hr02 {height: 28px;}
-    .headerico {padding: 11px 15px 11px 15px;}
-    .headericohover {background: #DADDE0;}
-    .fr{float: right;}
-    .fl{float: left;}
-    .pa {position: absolute;}
-    img {vertical-align: top;}
+      .topbar {background: #D43C33; height:40px; border-bottom: 1px solid #DDDFE3;position: relative;}
+      .topbar_title {display: inline-block;font-size: 20px; line-height: 50px;padding-left: 12px;}
+      .hr01, .hr02 {height: 28px;}
+      .headerico {padding: 11px 15px 11px 15px;}
+      .headericohover {background: #DADDE0;}
+      .fr{float: right;}
+      .fl{float: left;}
+      .pa {position: absolute;}
+      img {vertical-align: top;}
 
-     /*第一头部*/
-    .egret-header-box {height: 50px;}
-    .egret-img img {height: 30px;padding: 10px;position: absolute;top: 15px;}
-    .egret-header-search {background-color: #fff; position: absolute; left: 60px; right: 20px; height: 34px; margin-top: 8px;border-radius: 4px;}
-    .egret-header-search img {margin-left: 30px; height: 20px; margin-top: 7px;}
+       /*第一头部*/
+      .egret-header-box {height: 50px;}
+      .egret-img img {height: 30px;padding: 10px;}
+      .egret-header-search {background-color: #fff; position: absolute; left: 60px; right: 20px; height: 34px; margin-top: 8px;border-radius: 4px;}
+      .egret-header-search img {margin-left: 30px; height: 20px; margin-top: 7px;}
 
-     /* 第二头部 */
-    .egret-header-text {line-height: 50px;color: #fff;font-size: 16px;padding: 0 10px;position: absolute;top: 15px;}
-    .egret-header-title {position: absolute;width: 100%;text-align: center;line-height: 40px;color: #fff;font-size: 20px;top: 15px;}
-
-
-    /* 第三头部 */
-    .egret-switchframe {position: absolute; left: 90px; right: 90px;background-color: #fcfcfc;text-align: center;height: 30px;line-height: 30px;bottom: 10px;border-radius: 4px;color: #fff;border: 1px solid #fff;}
-    .egret-switchframe div {width: 50%;display: inline-block;color: #fff;background-color: #D43C33;}
-    .egret-switchframe div:first-child {border-radius: 4px 0 0 4px;}
-    .egret-switchframe div:last-child {border-radius: 0px 4px 4px 0px;}
-    .egret-switchframe-selectswitch {background-color: #fff !important;color: #D43C33 !important;}
-
-     /* 头部切换样式 */
-     .titlebar {display: none;}
-     .activebar {display: block;}
-
-     /* 底部切换按钮样式 */
-     ul {display: -webkit-box; display: -webkit-flex; display: flex; }
-     #footer {height: 51px; /*line-height: 50px;*/ background-color: #413A36;border-top: 1px solid #332E2A; }
-     #footer li{-webkit-box-flex: 1; -webkit-flex: 1; flex:1; /*height: 40px;*/}
-
-     /* 选项卡样式 */
-     .scrollbar {display: -webkit-box;display: -webkit-flex; text-align: center; height: 40px; line-height: 40px;background: #EBECF0;font-size: 12px;position: relative;}
-     .col1 {-webkit-box-flex:1;-webkit-flex: 1;flex:1;color: #909090;}
-     .indexbar {position: absolute;/*background: #0fc;*/width: 50%;height: 5px;left: 0px;bottom: 0px;-webkit-transition: 300ms;}
-     .redbox {background: #DB4646;width: 40px;height: 5px;position: relative;left: auto;right: auto; margin-left: auto; margin-right: auto;}
-
-     /********************/
-     /* 底部按钮原始样式 */
-     /********************/
-     .bbtn01 {background: url(./image/main_index01.png) no-repeat center 4px; }
-     .bbtn02 {background: url(./image/main_index02.png) no-repeat center 4px; }
-     .bbtn03 {background: url(./image/main_index03.png) no-repeat center 4px; }
-     .bbtn04 {background: url(./image/main_index04.png) no-repeat center 4px; }
-     .bottom_btn {width: 99%; /*height: 43px;*/padding-top: 21px;background-position-y: 4px; background-size: 24px;  font-size: 10px; color: #A5A5A5;}
-
-     /* 底部按钮激活样式 */
-     .activebtn0 {/*background: url(./image/main_index01pressed.png) no-repeat center 4px; */}
-     .activebtn1 {/*background: url(./image/main_index02pressed.png) no-repeat center 4px; */}
-     .activebtn2 {/*background: url(./image/main_index03pressed.png) no-repeat center 4px; */}
-     .activebtn3 {/*background: url(./image/main_index04pressed.png) no-repeat center 4px; */}
-     .activebtn {color:#fff; background-size: 24px; background-color: #D33A31;}
-     .bottomhover {background-color: #46494B;}
-
-     /* 本地刷新图标 */
-     #localrefresh {display:none;float: right; width: 40px; padding: 5px 10px;}
+       /* 第二头部 */
+      .egret-header-text {line-height: 50px;height: 50px;color: #fff;font-size: 16px;padding: 0 10px;}
+      .egret-header-title {position: absolute;width: 100%;text-align: center;line-height: 40px;color: #fff;font-size: 20px;}
 
 
-.navbar {display: -webkit-box; -webkit-box-orient: horizontal; position: relative; height: 50px; line-height: 50px; box-sizing: border-box; top: -15px;}
-    .navbar-item {display: block; -webkit-box-flex: 1; width: 100%; line-height: 50px;  font-size: 16px; text-align: center;color: #000; }
-    .navbar-item-hov {background-color: rgba(254,242,228,0.7); }
-    .navbar-item-active {color: #fff; }
-    #navmark {position: absolute; left: 0px; bottom: 0px; -webkit-transition: 300ms; text-align: center; height: 2px;background-color: #D43C33;}
+      /* 第三头部 */
+      .egret-switchframe {position: absolute; left: 90px; right: 90px;background-color: #fcfcfc;text-align: center;height: 30px;line-height: 30px;bottom: 5px;border-radius: 4px;color: #fff;border: 1px solid #fff;}
+      .egret-switchframe div {width: 50%;display: inline-block;color: #fff;background-color: #D43C33;}
+      .egret-switchframe div:first-child {border-radius: 4px 0 0 4px;}
+      .egret-switchframe div:last-child {border-radius: 0px 4px 4px 0px;}
+      .egret-switchframe-selectswitch {background-color: #fff !important;color: #D43C33 !important;}
 
-    .menu1 {
-        line-height:50px;
-        -webkit-box-flex: 1;
-        -webkit-flex: 1;
-        flex: 1;
-        text-align: center;
-    }
-    .menu2 {
-        width: 70px;
-        height: 30px;
-        line-height: 40px;
-        background-size: 30px;
-        background-repeat: no-repeat;
-        background-position: center;
-        background-image: url("image/menu.png");
-        position: relative;
-        top: -5px;
-    }
+       /* 头部切换样式 */
+       .titlebar {display: none;}
+       .activebar {display: block;}
+
+       /* 底部切换按钮样式 */
+       ul {display: -webkit-box; display: -webkit-flex; display: flex; }
+       #footer {height: 51px; /*line-height: 50px;*/ background-color: #413A36;border-top: 1px solid #332E2A; }
+       #footer li{-webkit-box-flex: 1; -webkit-flex: 1; flex:1; /*height: 40px;*/}
+
+       /* 选项卡样式 */
+       .scrollbar {display: -webkit-box;display: -webkit-flex; text-align: center; height: 40px; line-height: 40px;background: #EBECF0;font-size: 12px;position: relative;}
+       .col1 {-webkit-box-flex:1;-webkit-flex: 1;flex:1;color: #909090;}
+       .indexbar {position: absolute;/*background: #0fc;*/width: 50%;height: 5px;left: 0px;bottom: 0px;-webkit-transition: 300ms;}
+       .redbox {background: #DB4646;width: 40px;height: 5px;position: relative;left: auto;right: auto; margin-left: auto; margin-right: auto;}
+
+       /********************/
+       /* 底部按钮原始样式 */
+       /********************/
+       .bbtn01 {background: url(./image/main_index01.png) no-repeat center 4px; }
+       .bbtn02 {background: url(./image/main_index02.png) no-repeat center 4px; }
+       .bbtn03 {background: url(./image/main_index03.png) no-repeat center 4px; }
+       .bbtn04 {background: url(./image/main_index04.png) no-repeat center 4px; }
+       .bottom_btn {width: 99%; /*height: 43px;*/padding-top: 21px;background-position-y: 4px; background-size: 24px;  font-size: 10px; color: #A5A5A5;}
+
+       /* 底部按钮激活样式 */
+       .activebtn0 {/*background: url(./image/main_index01pressed.png) no-repeat center 4px; */}
+       .activebtn1 {/*background: url(./image/main_index02pressed.png) no-repeat center 4px; */}
+       .activebtn2 {/*background: url(./image/main_index03pressed.png) no-repeat center 4px; */}
+       .activebtn3 {/*background: url(./image/main_index04pressed.png) no-repeat center 4px; */}
+       .activebtn {color:#fff; background-size: 24px; background-color: #D33A31;}
+       .bottomhover {background-color: #46494B;}
+
+       /* 本地刷新图标 */
+       #localrefresh {display:none;float: right; width: 40px; padding: 5px 10px;}
+
+
+  .navbar {display: -webkit-box; -webkit-box-orient: horizontal; position: relative; height: 40px; box-sizing: border-box;  }
+      .navbar-item {display: block; -webkit-box-flex: 1; width: 100%; line-height: 40px;  font-size: 16px; text-align: center;color: #000; }
+      .navbar-item-hov {background-color: rgba(254,242,228,0.7); }
+      .navbar-item-active {color: #fff; }
+      #navmark {position: absolute; left: 0px; bottom: 0px; -webkit-transition: 300ms; text-align: center; height: 2px;background-color: #D43C33;}
+
+      .menu1 {
+          line-height:30px;
+          -webkit-box-flex: 1;
+          -webkit-flex: 1;
+          flex: 1;
+          text-align: center;
+      }
+      .menu2 {
+          width: 70px;
+          height: 40px;
+          line-height: 40px;
+          background-size: 30px;
+          background-repeat: no-repeat;
+          background-position: center;
+          background-image: url("image/menu.png");
+      }
     </style>
 </head>
 <body>
@@ -678,6 +676,22 @@ apiready = function() {
     }, function (ret) {
 
     });
+
+  var uzgetuisdk = api.require('pushGeTui');
+   uzgetuisdk.initialize(function(ret) {
+       var value = "";
+       switch (ret.type) {
+           case 'cid':
+               value = 'cid:' + ret.cid;
+               break;
+           case 'payload':
+               value = 'payload:' + ret.payload;
+               break;
+           case 'occurError':
+               value = 'occurError';
+               break;
+       }
+   });
 
 };
 
