--- a/html/first_frame/frame01_recommand.html
+++ b/html/first_frame/frame01_recommand.html
@@ -71,37 +71,39 @@ html,body {min-height: 100%;}
 
 /* 悬浮 */
 .fmbtnhover {background: #D8D9DA ;}
+
 </style>
 </head>
 <body>
 
-	<!-- <div class="swiper-container"> -->
-		<div class="swiper-wrapper">
-			<!--First Slide-->
-			<div class="swiper-slide">
-				<img src="../../image/frame0101cover/frame0101cover01.jpg" alt="">
-			</div>
-
-			<!--Second Slide-->
-			<div class="swiper-slide">
-				<img src="../../image/frame0101cover/frame0101cover02.jpg" alt="">
-			</div>
-
-
-			<div class="swiper-slide">
-				<img src="../../image/frame0101cover/frame0101cover03.jpg" alt="">
-			</div>
-
-			<div class="swiper-slide">
-				<img src="../../image/frame0101cover/frame0101cover04.jpg" alt="">
-			</div>
-
-			<div class="swiper-slide">
-				<img src="../../image/frame0101cover/frame0101cover05.jpg" alt="">
-			</div>
+<div class="swiper-container">
+	<div class="swiper-wrapper">
+		<!--First Slide-->
+		<div class="swiper-slide">
+			<img src="../../image/frame0101cover/frame0101cover01.jpg" alt="">
 		</div>
-		<div class="pagination"></div>
+
+		<!--Second Slide-->
+		<div class="swiper-slide">
+			<img src="../../image/frame0101cover/frame0101cover02.jpg" alt="">
+		</div>
+
+
+		<div class="swiper-slide">
+			<img src="../../image/frame0101cover/frame0101cover03.jpg" alt="">
+		</div>
+
+		<div class="swiper-slide">
+			<img src="../../image/frame0101cover/frame0101cover04.jpg" alt="">
+		</div>
+
+		<div class="swiper-slide">
+			<img src="../../image/frame0101cover/frame0101cover05.jpg" alt="">
+		</div>
 	</div>
+	<div class="pagination"></div>
+</div>
+
 <!-- 2 热门推荐 -->
 <div class="sectionTitle"><div class="titleDivider"></div><span>热门推荐</span></div>
 <div class="row">
@@ -199,42 +201,16 @@ html,body {min-height: 100%;}
 <script type="text/javascript" src="../../script/idangerous.swiper.js"></script>
 <script type="text/javascript">
 window.onload = function() {
-// var mySwiper = new Swiper('.swiper-container',{
-		rect: {
-        x: 0,
-        y: 0,
-        w: $api.frameWidth,
-        h: $api.frameHeight/4
-    },
-		pagination: '.pagination',
-		styles: {
-        caption: {
-            height: 35,
-            color: '#E0FFFF',
-            size: 13,
-            bgColor: '#696969',
-            position: 'bottom'
-        },
-        indicator: {
-           dot:{
-             w:20,
-             h:10,
-             r:5,
-             margin:20
-          },
-            align: 'center',
-            color: '#FFFFFF',
-            activeColor: '#DA70D6'
-        }
-    },
-		contentMode: 'scaleToFill',
-    interval: 3,
-    // fixedOn: api.frameName,
-    loop: true,
-    fixed: false,
-		auto:true
-	});
-
+	// var mySwiper = new Swiper('.swiper-container',{
+	// 	// direction:'horizontal',
+	// 	loop: true,
+	// 	autoplay: 2000,
+	// 	// speed:750,
+	// 	pagination: '.swiper-pagination',
+	// 	paginationType : 'bullets',
+	// 	paginationClickable :true,
+	// });
+	//
 	// mySwiper.startAutoplay();
 }
 
@@ -276,42 +252,6 @@ function openFM () {
 }
 apiready = function  () {
 	// api.parseTapmode();
-	// var UIScrollPicture = api.require('UIScrollPicture');
-	// UIScrollPicture.open('.swiper-container',{
-			rect: {
-	        x: 0,
-	        y: 0,
-	        w: $api.frameWidth,
-	        h: $api.frameHeight/4
-	    },
-			pagination: '.pagination',
-			styles: {
-	        caption: {
-	            height: 35,
-	            color: '#E0FFFF',
-	            size: 13,
-	            bgColor: '#696969',
-	            position: 'bottom'
-	        },
-	        indicator: {
-	           dot:{
-	             w:20,
-	             h:10,
-	             r:5,
-	             margin:20
-	          },
-	            align: 'center',
-	            color: '#FFFFFF',
-	            activeColor: '#DA70D6'
-	        }
-	    },
-			contentMode: 'scaleToFill',
-	    interval: 3,
-	    // fixedOn: api.frameName,
-	    loop: true,
-	    fixed: false
-			// auto:true
-		});
 }
 </script>
 </html>
