个推又改版了
git-svn-id: svn://svn3.apicloud.com/A6068784333482/xiaoguo@15 0e1a2743-8d03-4e5a-a60c-7e26af42b145

--- a/html/musiclist.html
+++ b/html/musiclist.html
@@ -29,7 +29,7 @@ html,body {min-height: 100%;background-color: #f9f9f9;}
 .topbar {background: #D43C33; height:50px; border-bottom: 1px solid #DDDFE3;position: relative;}
 
 .egret-header-box {height: 50px;}
-.egret-img {position: absolute;top: -5px;}
+.egret-img {position: absolute;}
 .egret-img img {height: 30px;padding: 10px;vertical-align: top;}
 .egret-header-search {background-color: #fff; position: absolute; left: 60px; right: 20px; height: 34px; margin-top: 8px;border-radius: 4px;}
 .egret-header-search img {margin-left: 30px; height: 20px; margin-top: 7px;}
@@ -37,8 +37,8 @@ html,body {min-height: 100%;background-color: #f9f9f9;}
 .egret-header-search input:focus {/*border:0;*/ outline:none;}
 
  /* 第二头部 */
-.egret-header-text {line-height: 50px;color: #fff;font-size: 16px;padding: 0 10px;position: absolute;top: -10px;}
-.egret-header-title {position: absolute;width: 100%;text-align: center;line-height: 50px;color: #fff;font-size: 20px;top: -10px;}
+.egret-header-text {line-height: 50px;color: #fff;font-size: 16px;padding: 0 10px;}
+.egret-header-title {position: absolute;width: 100%;text-align: center;line-height: 50px;color: #fff;font-size: 20px;}
 
 
 /* 歌单标题 */
