--- a/index.html
+++ b/index.html
@@ -192,26 +192,9 @@ var isForthOpen = false;
 
 
 // 推送
-function callback(ret, err){
-      var uzgetuisdk = api.require('pushGeTui');
-      uzgetuisdk.initialize(function(ret) {
-          var value = "";
-          switch (ret.type) {
-              case 'cid':
-                  value = 'cid:' + ret.cid;
-                  break;
-              case 'payload':
-                  value = 'payload:' + ret.payload;
-                  break;
-              case 'occurError':
-                  value = 'occurError';
-                  break;
-          }
-      });
-    }
-
-
-
+    var uzgetuisdk = api.require('pushGeTui');
+    uzgetuisdk.initialize(function(ret) {    api.alert({msg:"cid:" + ret.cid});
+    });
 
 function emptyopt() {}
 function sliding() {
