测试是否能够通过个推平台
git-svn-id: svn://svn3.apicloud.com/A6068784333482/xiaoguo@19 0e1a2743-8d03-4e5a-a60c-7e26af42b145

--- a/html/first_frame/frame01_recommand.html
+++ b/html/first_frame/frame01_recommand.html
@@ -201,17 +201,13 @@ html,body {min-height: 100%;}
 <script type="text/javascript" src="../../script/idangerous.swiper.js"></script>
 <script type="text/javascript">
 window.onload = function() {
-	// var mySwiper = new Swiper('.swiper-container',{
-	// 	// direction:'horizontal',
-	// 	loop: true,
-	// 	autoplay: 2000,
-	// 	// speed:750,
-	// 	pagination: '.swiper-pagination',
-	// 	paginationType : 'bullets',
-	// 	paginationClickable :true,
-	// });
-	//
-	// mySwiper.startAutoplay();
+	var mySwiper = new Swiper('.swiper-container',{
+		mode:'horizontal',
+		loop: true,
+		speed:750,
+		pagination: '.pagination'
+	});
+	mySwiper.startAutoplay();
 }
 
 function openMusicList () {
