--- a/html/first_frame/frame01_recommand.html
+++ b/html/first_frame/frame01_recommand.html
@@ -6,7 +6,6 @@
 <meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0"/>
 <title>首页推荐</title>
 <link rel="stylesheet" type="text/css" href="../../css/api.css" />
-<link rel="stylesheet" type="text/css" href="../../css/idangerous.swiper.css">
 <style>
 html,body {min-height: 100%;}
 .fr {float: right;}
@@ -72,36 +71,45 @@ html,body {min-height: 100%;}
 /* 悬浮 */
 .fmbtnhover {background: #D8D9DA ;}
 
+.swipe {
+                overflow: hidden;
+                visibility: hidden;
+                position: relative;
+                background: #fff;
+                padding-bottom: 10px;
+            }
+
+            .swipe-wrap {
+                overflow: hidden;
+                position: relative;
+            }
+
+            .swipe-wrap .swipe-box {
+                float: left;
+                width: 100%;
+                position: relative;
+            }
+
+            .swipe-wrap .swipe-box img {
+                width: 100%;
+            }
+
 </style>
 </head>
 <body>
 
-<div class="swiper-container">
-	<div class="swiper-wrapper">
-		<!--First Slide-->
-		<div class="swiper-slide">
-			<img src="../../image/frame0101cover/frame0101cover01.jpg" alt="">
-		</div>
-
-		<!--Second Slide-->
-		<div class="swiper-slide">
-			<img src="../../image/frame0101cover/frame0101cover02.jpg" alt="">
-		</div>
-
-
-		<div class="swiper-slide">
-			<img src="../../image/frame0101cover/frame0101cover03.jpg" alt="">
-		</div>
-
-		<div class="swiper-slide">
-			<img src="../../image/frame0101cover/frame0101cover04.jpg" alt="">
-		</div>
-
-		<div class="swiper-slide">
-			<img src="../../image/frame0101cover/frame0101cover05.jpg" alt="">
-		</div>
-	</div>
-	<div class="pagination"></div>
+<div id='slider' class='swipe'>
+    <div class='swipe-wrap'>
+        <div class="swipe-box">
+            <img src="../../image/frame0101cover/frame0101cover01.jpg" alt="">
+        </div>
+        <div class="swipe-box">
+            <img src="../../image/frame0101cover/frame0101cover02.jpg" alt="">
+        </div>
+        <div class="swipe-box">
+            <img src="../../image/frame0101cover/frame0101cover03.jpg" alt="">
+        </div>
+    </div>
 </div>
 
 <!-- 2 热门推荐 -->
@@ -198,17 +206,13 @@ html,body {min-height: 100%;}
 
 </body>
 <script type="text/javascript" src="../../script/api.js"></script>
-<script type="text/javascript" src="../../script/idangerous.swiper.js"></script>
+<script type="text/javascript" src="../../script/swipe.js"></script>
 <script type="text/javascript">
-window.onload = function() {
-	var mySwiper = new Swiper('.swiper-container',{
-		mode:'horizontal',
-		loop: true,
-		speed:750,
-		pagination: '.pagination'
-	});
-	mySwiper.startAutoplay();
-}
+var slider = Swipe(document.getElementById('slider'), {
+            auto: 3000,
+            continuous: true,
+            callback: function(pos) {}
+        });
 
 function openMusicList () {
 	api.openWin({
