--- a/html/forth_frame/about.html
+++ b/html/forth_frame/about.html
@@ -164,7 +164,28 @@ html,body {min-height: 100%;background-color: #f9f9f9;}
 function goback () {
 	api.closeWin({name:'about'});
 }
-
+// function openFrames() {
+//     // 打开话筒的frame
+//     api.openFrame({
+//         name: 'minicart_frame',
+//         url: './html/forth_frame/minicart_frame.html',
+//         rect: {
+//             x: 0,
+//             y: api.winHeight - 150,
+//             w: 150,
+//             h: 34
+//         },
+//         bounces: false // 关闭弹动
+//     });
+//
+//     // 将Frame放置在首页Window所有Frame的最上层
+//     api.bringFrameToFront({
+//         from: 'minicart_frame'
+//     });
+//
+//     // 标记为已经打开
+//     framesOpened = true;
+// }
 apiready = function (){
 	var header = $api.byId('secHeader');
     $api.fixStatusBar(header);
@@ -184,7 +205,7 @@ apiready = function (){
 		}
 
 	});
-
+  //  openFrames();
 }
 </script>
 </html>
