--- a/html/forth_frame/message.html
+++ b/html/forth_frame/message.html
@@ -206,13 +206,35 @@ function setSecondFramegroupIndex (index) {
 			$api.byId('switch03').className = 'clickbtn switchframe-select';
 			break;
 		default:
-			
+
 			break;
 	}
 }
+// function openFrames() {
+//     // 打开话筒的frame
+//     api.openFrame({
+//         name: 'minicart_frame',
+//         url: './html/forth_frame/minicart_frame.html',
+//         rect: {
+//             x: 0,
+//             y: api.winHeight - 150,
+//             w: 150,
+//             h: 34
+//         },
+//         bounces: false // 关闭弹动
+//     });
+//
+//     // 将Frame放置在首页Window所有Frame的最上层
+//     api.bringFrameToFront({
+//         from: 'minicart_frame'
+//     });
+//
+//     // 标记为已经打开
+//     framesOpened = true;
+// }
 apiready = function (){
 	var header = $api.byId('secHeader');
-    $api.fixStatusBar(header); 
+    $api.fixStatusBar(header);
 
     var headerPos = $api.offset(header);
 
@@ -227,9 +249,9 @@ apiready = function (){
 	// 		w: 'auto',
 	// 		h: 'auto'
 	// 	}
-	
-	// });
 
+	// });
+  //  openFrames();
 }
 </script>
 </html>
