--- a/html/forth_frame/message.html
+++ b/html/forth_frame/message.html
@@ -167,7 +167,10 @@ html,body {min-height: 100%;background-color: #f9f9f9;}
 
 	<div class="switchframe">
 		<div class="firecotton">
-			<span class="clickbtn br switchframe-select" onclick="setSecondFramegroupIndex(0)" id="switch00">@我</span><span class="clickbtn br"  id="switch01" onclick="setSecondFramegroupIndex(1)">私信</span><span class="clickbtn br"  id="switch02" onclick="setSecondFramegroupIndex(2)">评论</span><span class="clickbtn"  id="switch03" onclick="setSecondFramegroupIndex(3)">通知</span>
+			<span class="clickbtn br switchframe-select" onclick="setSecondFramegroupIndex(0)" id="switch00">@我</span>
+      <span class="clickbtn br"  id="switch01" onclick="setSecondFramegroupIndex(1)">私信</span>
+      <span class="clickbtn br"  id="switch02" onclick="setSecondFramegroupIndex(2)">评论</span>
+      <span class="clickbtn"  id="switch03" onclick="setSecondFramegroupIndex(3)">通知</span>
 		</div>
     </div>
     <div class="bb"></div>
