--- a/html/minicart_frame.html
+++ b/html/minicart_frame.html
@@ -23,31 +23,26 @@
         width: auto;
         height:25px;
         min-width: 35px;
-        color: #fff;
+        /*color: #fff;*/
         font-size: 12px;
-        /*background-image: url(../image/minicart.png);*/
+        /*background-image: url(../image/huatong.png);*/
         /*background-color: #fff;*/
         background-repeat: no-repeat;
         background-size: auto 33px;
         background-position: right center;
-              overflow-y: hidden;
+        overflow-y: hidden;
     }
     .prefix{
       width: auto;
-      height: 40px;
-      overflow-y: hidden;
-      min-width: 35px;
-    }
-    .prefix img{
-      width: 25px;
       height: 25px;
+      min-width: 25px;
     }
     </style>
 </head>
 
 <body>
     <section>
-        <span class="prefix"><img src="../image/huatong.png" alt=""></span>
+        <img class="prefix" src="../image/huatong.png" alt="">
     </section>
 </body>
 <script type="text/javascript" src="../script/api.js"></script>
