--- a/index1.html
+++ b/index1.html
@@ -92,16 +92,16 @@
         <div id='slide' class='swipe'>
             <div class='swipe-wrap' id="banner-content">
                 <div>
-                    <img src="./image/1.jpg" />
+                    <img src="./image/74.png" />
                 </div>
                 <div>
-                    <img src="./image/2.jpg" />
+                    <img src="./image/74.png" />
                 </div>
                 <div>
-                    <img src="./image/3.jpg" />
+                    <img src="./image/74.png" />
                 </div>
                 <div>
-                    <img src="./image/4.jpg" />
+                    <img src="./image/74.png" />
 
                     <div class="div" onclick="fnOpenRegisterWin ()">
                         <div>立即体验</div>
